<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="">

    <item android:id="@+id/home"
        android:title="@string/Home"
        android:icon="@drawable/home"
        />

    <item android:id="@+id/setting"
        android:title="@string/Setting"
        android:icon="@drawable/settings"
        />

    <item android:id="@+id/communicate"
        android:title="@string/Communicate"
        android:icon="@drawable/communicate"
        />

    <item android:id="@+id/garage"
        android:title="@string/Garage"
        android:icon="@drawable/garage"
        />

    <item android:id="@+id/signout"
        android:title="@string/Sign_Out"
        android:icon="@drawable/logout"
        />

</menu>