<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back4"
    tools:context=".UpdateCarDriver">

    <TextView
        android:id="@+id/dislpay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/Update_Car_Driver_Information"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/cardview_light_background"
        android:gravity="center"
        app:fontFamily="@font/lato_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Enter_EMail_Address"
        android:textColorHint="@color/cardview_light_background"
        android:inputType="textPersonName"
        android:textColor="@color/cardview_light_background"
        app:fontFamily="@font/lato_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/phonenumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Enter_Phone_Number"
        android:textColorHint="@color/cardview_light_background"
        android:inputType="phone"
        android:textColor="@color/cardview_light_background"
        app:fontFamily="@font/lato_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Enter_Name"
        android:textColorHint="@color/cardview_light_background"
        android:inputType="textPersonName"
        android:textColor="@color/cardview_light_background"
        app:fontFamily="@font/lato_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/licenseid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Enter_License_ID"
        android:textColorHint="@color/cardview_light_background"
        android:inputType="textPersonName"
        android:textColor="@color/cardview_light_background"
        app:fontFamily="@font/lato_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:background="@drawable/cardriver_button"
        android:onClick="UpdateCarDriverUser"
        android:text="@string/Update"
        android:textAllCaps="false"
        android:textColor="#EAD05B"
        android:textSize="16sp"
        android:textStyle="bold"
        app:fontFamily="@font/lato_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>